openfaas/openfaas-ingress-crd.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: openfaas-ingress-crd
  namespace: openfaas
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`openfaas.cube.local`)
    kind: Rule
    services:
    - name: openfaas-service
      port: 8080
