openfaas/openfaas-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openfaas-ingress
  namespace: openfaas
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
#    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
  - host: openfaas.cube.local
  - http:
      paths:
        - pathType: Exact
          path: /openfaas
          backend:
            service:
              name: openfaas-service
              port:
                number: 8080
